[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Icons/question.png" type="Texture" id=1]
[ext_resource path="res://assets/Icons/bar_foreground3.png" type="Texture" id=2]
[ext_resource path="res://assets/Icons/bar_background.png" type="Texture" id=3]
[ext_resource path="res://scenes/UI/PitchIcon.gd" type="Script" id=4]
[ext_resource path="res://scenes/UI/Pitch.gd" type="Script" id=5]

[node name="Pitch" type="HBoxContainer"]
pause_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchIcon" type="TextureRect" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 54.0
margin_right = 270.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PitchBar" type="TextureProgress" parent="CenterContainer"]
margin_top = 16.0
margin_right = 216.0
margin_bottom = 34.0
value = 25.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )

[connection signal="mouse_entered" from="PitchIcon" to="." method="_on_PitchIcon_mouse_entered"]
[connection signal="mouse_exited" from="PitchIcon" to="." method="_on_PitchIcon_mouse_exited"]
[connection signal="turn_pitch_off" from="PitchIcon" to="." method="_on_PitchIcon_turn_pitch_off"]
[connection signal="turn_pitch_on" from="PitchIcon" to="." method="_on_PitchIcon_turn_pitch_on"]
[connection signal="mouse_entered" from="CenterContainer/PitchBar" to="." method="_on_PitchBar_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/PitchBar" to="." method="_on_PitchBar_mouse_exited"]
[connection signal="value_changed" from="CenterContainer/PitchBar" to="." method="_on_PitchBar_value_changed"]
